Repetitions to allow JIT to do its thing.